update swag tags
